force-app/main/default/objects/Work_Order_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Auto fills via formula data fields into the Work Order Item field &quot;Comments&quot;.  Smart Carpet Cleaning</description>
    <formula>IF( Service__r.Name = &quot;Smart Carpet Cleaning&quot;,  Work_Order__r.SFDC_SCC_Line_Item_Description__c , NULL)</formula>
    <label>Comments</label>
    <type>Text</type>
</CustomField>