force-app/main/default/objects/Work_Order_Item__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <formula>Service__r.Service_Description__c</formula>
    <label>Line Item Description</label>
    <type>Text</type>
</CustomField>