force-app/main/default/objects/Work_Order_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service must be active to appear in list</errorMessage>
        <filterItems>
            <field>Service__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Work Order Items</relationshipLabel>
    <relationshipName>Work_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>