force-app/main/default/objects/Work_Order_Item__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black Light Inspection with Brief Report</fullName>
            </value>
            <value>
                <fullName>Black Light Inspection with Full Report + Photos</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>High Soil/Spot Levels</fullName>
            </value>
            <value>
                <fullName>Minimum Service Charge</fullName>
            </value>
            <value>
                <fullName>OCA Broad Based</fullName>
            </value>
            <value>
                <fullName>OCA Targeted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bright Color/Earthtone treatment</fullName>
            </value>
            <value>
                <fullName>Smart Carpet Cleaning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>