force-app/main/default/objects/Work_Order_Item__c/fields/VTiger_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>VTiger_Service_Name__c</fullName>
    <label>VTiger Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>