force-app/main/default/objects/Work_Order_Item__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>false</active>
    <label>Commercial</label>
</RecordType>