force-app/main/default/objects/Work_Order_Item__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>false</active>
    <label>Residential</label>
</RecordType>