force-app/main/default/objects/Work_Order_Item__c/recordTypes/Work_Order_Item.recordType-meta.xml
<RecordType>
    <fullName>Work_Order_Item</fullName>
    <active>true</active>
    <label>Work Order Item</label>
</RecordType>